--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@react-spring/parallax": "^9.4.5",
     "chart.js": "^3.7.1",
+    "faker": "^5.5.3",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
