--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -4,19 +4,19 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-spring/parallax": "^9.4.5",
-    "chart.js": "^3.7.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "recharts": "^2.1.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "typescript": "^4.6.3",
     "vite": "^2.9.9"
   }
 }
